--- a/boost-maven-plugin/src/it/test-jaxrs-2.0/pom.xml
+++ b/boost-maven-plugin/src/it/test-jaxrs-2.0/pom.xml
@@ -33,8 +33,8 @@
 		<dependencies>
 			<dependency>
 				<groupId>io.openliberty.boost</groupId>
-				<artifactId>boost-bom</artifactId>
-				<version>@pom.version@</version>
+				<artifactId>boost-javaee7-bom</artifactId>
+				<version>0.1-SNAPSHOT</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
@@ -43,8 +43,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.openliberty.features</groupId>
-			<artifactId>jaxrs-2.0</artifactId>
+			<groupId>io.openliberty.boost</groupId>
+			<artifactId>boost-jaxrs-7</artifactId>
 			<type>esa</type>
 			<scope>provided</scope>
 		</dependency>
