re-work the booster and BOM support for new repo structure

--- a/boost-maven/boost-maven-plugin/pom.xml
+++ b/boost-maven/boost-maven-plugin/pom.xml
@@ -15,7 +15,22 @@
 
 	<artifactId>boost-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-
+	
+	<repositories>
+       <!-- Configure Sonatype OSS Maven snapshots repository -->
+       <repository>
+           <id>sonatype-nexus-snapshots</id>
+           <name>Sonatype Nexus Snapshots</name>
+           <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+           <snapshots>
+               <enabled>true</enabled>
+           </snapshots>
+           <releases>
+               <enabled>false</enabled>
+           </releases>
+       </repository>
+   </repositories>
+	
 	<dependencies>
 
 		<!-- Boost dependencies -->
