--- a/boost-maven/boost-boms/booster-mp20-bom/pom.xml
+++ b/boost-maven/boost-boms/booster-mp20-bom/pom.xml
@@ -17,36 +17,48 @@
 	</parent>
 
 	<groupId>io.openliberty.boosters</groupId>
-	<artifactId>ee8-bom</artifactId>
+	<artifactId>mp20-bom</artifactId>
 	<packaging>pom</packaging>
 
-	<description>Booster EE8 Feature Bom</description>
+	<description>Booster MP20 Feature Bom</description>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>io.openliberty.boost</groupId>
-				<artifactId>boost-ee8-apis-bom</artifactId>
-				<version>0.1-SNAPSHOT</version>
+    			<artifactId>boost-mp20-apis-bom</artifactId>
+    			<version>0.1-SNAPSHOT</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>io.openliberty.boosters</groupId>
-				<artifactId>jaxrs</artifactId>
-				<!-- Booster version distinct from the BOM, boost-maven-plugin version -->
-				<!-- Could also use 7.0, 8.0 for EE7, 8 -->
-				<!-- Probably will be 1.0 for initial GA -->
+				<artifactId>mpHealth</artifactId>
+				<version>0.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>io.openliberty.boosters</groupId>
+				<artifactId>mpConfig</artifactId>
 				<version>0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>io.openliberty.boosters</groupId>
-				<artifactId>cdi</artifactId>
+				<artifactId>mpRestClient</artifactId>
+				<version>0.2-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>io.openliberty.boosters</groupId>
+				<artifactId>jaxrs</artifactId>
 				<version>0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>io.openliberty.boosters</groupId>
 				<artifactId>jsonp</artifactId>
+				<version>0.2-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>io.openliberty.boosters</groupId>
+				<artifactId>cdi</artifactId>
 				<version>0.2-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
