--- a/boost-maven/boost-boms/pom.xml
+++ b/boost-maven/boost-boms/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2018 IBM Corporation and others. All rights reserved. 
 	This program and the accompanying materials are made available under the 
 	terms of the Eclipse Public License v1.0 which accompanies this distribution, 
@@ -12,9 +11,10 @@
     <parent>
         <groupId>io.openliberty.boost</groupId>
         <artifactId>boost-maven-parent</artifactId>
-        <version>0.1.3-SNAPSHOT</version>
+        <version>0.1.2-SNAPSHOT</version>
     </parent>
 	
+	<groupId>io.openliberty.boost</groupId>
 	<artifactId>boost-boms</artifactId>
 	<packaging>pom</packaging>
 	
@@ -23,6 +23,9 @@
 	    <module>booster-ee7-bom</module>
 		<module>boost-ee8-apis-bom</module>
 		<module>booster-ee8-bom</module>
+		<module>boost-mp20-apis-bom</module>
+		<module>booster-mp20-bom</module>
 	</modules>
+
 
 </project>
