--- a/boost-maven/boost-maven-plugin/src/it/test-mpHealth-1.0/pom.xml
+++ b/boost-maven/boost-maven-plugin/src/it/test-mpHealth-1.0/pom.xml
@@ -101,6 +101,12 @@
         <artifactId>mpHealth</artifactId>
     </dependency>
 	<!-- Java utility classes -->
+	<!-- because JDK9? -->
+	<dependency>
+    	<groupId>javax.xml.bind</groupId>
+    	<artifactId>jaxb-api</artifactId>
+    	<version>2.3.0</version>
+	</dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
