--- a/boost-maven/boost-boms/booster-mp20-bom/pom.xml
+++ b/boost-maven/boost-boms/booster-mp20-bom/pom.xml
@@ -40,6 +40,7 @@
 				<groupId>io.openliberty.boosters</groupId>
 				<artifactId>mpConfig</artifactId>
 				<version>0.2-SNAPSHOT</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>io.openliberty.boosters</groupId>
