second phase of tomee support - get the jars and put on classpath

--- a/boost-maven/boost-boms/booster-runtimes-bom/pom.xml
+++ b/boost-maven/boost-boms/booster-runtimes-bom/pom.xml
@@ -28,6 +28,7 @@
 				<groupId>io.openliberty.boosters</groupId>
 				<artifactId>tomee</artifactId>
 				<version>0.2-SNAPSHOT</version>
+				<scope>provided</scope>
 		    </dependency>
 		</dependencies>
 	</dependencyManagement>
