--- a/boost-maven/boost-boms/booster-mp20-bom/pom.xml
+++ b/boost-maven/boost-boms/booster-mp20-bom/pom.xml
@@ -35,6 +35,7 @@
 				<groupId>io.openliberty.boosters</groupId>
 				<artifactId>mpHealth</artifactId>
 				<version>0.2-SNAPSHOT</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>io.openliberty.boosters</groupId>
@@ -46,21 +47,25 @@
 				<groupId>io.openliberty.boosters</groupId>
 				<artifactId>mpRestClient</artifactId>
 				<version>0.2-SNAPSHOT</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>io.openliberty.boosters</groupId>
 				<artifactId>jaxrs</artifactId>
 				<version>0.2-SNAPSHOT</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>io.openliberty.boosters</groupId>
 				<artifactId>jsonp</artifactId>
 				<version>0.2-SNAPSHOT</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>io.openliberty.boosters</groupId>
 				<artifactId>cdi</artifactId>
 				<version>0.2-SNAPSHOT</version>
+				<scope>provided</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
